# vray_for_blender_server

./: .gitmodules  CMakeLists.txt  ui_mainwindow.h  vray-zmq.sublime-workspace  window.cpp  window.h
client/: CMakeLists.txt  main.cpp  mainwindow.ui  ui_mainwindow.h  window.cpp  window.h
cmake/: vfb_macros.cmake  vfh_vrayappsdk.cmake
server/: CMakeLists.txt  main.cpp  mainwindow.ui  renderer_controller.cpp  renderer_controller.h  ui_mainwindow.h  window.cpp  window.h  zmq_proxy_server.cpp  zmq_proxy_server.h  zmq_server_client.cpp  zmq_server_client.h
server/utils/: logger.cpp  logger.h  logging_renderer.hpp  version.h
zmq-wrapper/: CMakeLists.txt  base_types.h  deserializer.hpp  serializer.hpp  zmq_message.hpp  zmq_wrapper.cpp  zmq_wrapper.h
zmq-wrapper/include/: base_types.h  deserializer.hpp  serializer.hpp  zmq_message.hpp  zmq_wrapper.h
